--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ img {
 * {
     margin: 0;
     padding: 0;
-}a:hover { 
+}
+a:hover { 
     background-color: white;
     color: #2961A6;
 }
@@ -55,6 +56,7 @@ a {
 }
 footer {
     color: white;
+    /*padding: auto;*/  
 }
 /*nav a:hover {
      color: rgb(0, 13, 255);
