--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 :root {
     --background-color: #121212 ;
     --color-text: white;
@@ -7,6 +8,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .light-theme {
@@ -21,8 +23,6 @@
    height: 320px;
    border: 5px solid #2961a6;
 }
-
-
 
 a {
     background-color: #2961A6;
