--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ a:hover {
 body {
     color: #2961A6;
     background-color: var(--background-color);
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -120,6 +119,8 @@ nav {
     display: block;
     margin: auto;
     margin-top: 15px;
+    /*margin-right: 320px; 
+    margin-left: auto;*/
 }
 
 /*.icon {
