--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -32,7 +33,6 @@ a {
     display: block;
     border-radius: 5px;
     font-weight: bold;
-
 }
 
 a:hover { 
